--- a/ProjectPage.html
+++ b/ProjectPage.html
@@ -79,6 +79,11 @@
     <main>
         <button onclick="window.location.href = '/projects';">Back</button>
         <p>A bash script that spams nmap commands</p>
+        <p class="download">
+            <label for="versions">Repo and Download</label>
+            <button onclick="window.location.href = 'https://github.com/Orbinuity/NmapSpam';">Repo</button>
+            <button onclick="window.location.href = 'https://github.com/Orbinuity/NmapSpam/releases';">Download</button>
+        </p>
     </main>
     <footer>
         <p>Visit the <a href="https://github.com/Orbinuity/NmapSpam">Nmap Spam Repo</a> | Made by <a href="https://github.com/Orbinuity">Orbinuity</a> | Email: <a href="mailto:orbinuity@ratgers.nl">Orbinuity@ratgers.nl</a></p>
